// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectButtonItem {"disabled": true, "initialIndex": 1, "size": "small", "style": [Object]} 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 10.5,
        "flexDirection": "row",
        "gap": 3.5,
        "padding": 3.5,
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    disabled={true}
    index={0}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"1"}
    size="small"
    testID="SelectButton_SelectButtonItem_0"
  />
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    disabled={true}
    index={1}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"1"}
    showIcon={false}
    size="small"
    testID="SelectButton_SelectButtonItem_1"
  />
</View>
`;

exports[`SelectButtonItem {"initialIndex": 1, "size": "xlarge"} 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 10.5,
        "flexDirection": "row",
        "gap": 3.5,
        "padding": 3.5,
      },
      undefined,
    ]
  }
>
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={0}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"1"}
    size="xlarge"
    testID="SelectButton_SelectButtonItem_0"
  />
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={1}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"1"}
    showIcon={false}
    size="xlarge"
    testID="SelectButton_SelectButtonItem_1"
  />
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
    testID="SelectButton_AnimatedFrame"
  />
</View>
`;

exports[`SelectButtonItem {"initialIndex": 2, "size": "base"} 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 10.5,
        "flexDirection": "row",
        "gap": 3.5,
        "padding": 3.5,
      },
      undefined,
    ]
  }
>
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={0}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    size="base"
    testID="SelectButton_SelectButtonItem_0"
  />
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={1}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    showIcon={false}
    size="base"
    testID="SelectButton_SelectButtonItem_1"
  />
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
    testID="SelectButton_AnimatedFrame"
  />
</View>
`;

exports[`SelectButtonItem {"size": "large"} 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 10.5,
        "flexDirection": "row",
        "gap": 3.5,
        "padding": 3.5,
      },
      undefined,
    ]
  }
>
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={0}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    size="large"
    testID="SelectButton_SelectButtonItem_0"
  />
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={1}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    showIcon={false}
    size="large"
    testID="SelectButton_SelectButtonItem_1"
  />
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
    testID="SelectButton_AnimatedFrame"
  />
</View>
`;

exports[`SelectButtonItem {} 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "backgroundColor": "#e2e2e4",
        "borderRadius": 10.5,
        "flexDirection": "row",
        "gap": 3.5,
        "padding": 3.5,
      },
      undefined,
    ]
  }
>
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={0}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    testID="SelectButton_SelectButtonItem_0"
  />
  <SelectButtonItem
    Icon={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    index={1}
    label="ButtonSelect"
    onLayout={[Function]}
    onPress={[Function]}
    position={"0"}
    showIcon={false}
    testID="SelectButton_SelectButtonItem_1"
  />
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 0,
          "width": 0,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
      ]
    }
    style={
      [
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 7,
          "bottom": 3.5,
          "left": 3.5,
          "position": "absolute",
          "top": 3.5,
          "zIndex": -1,
        },
        {
          "left": 0,
          "width": 0,
        },
      ]
    }
    testID="SelectButton_AnimatedFrame"
  />
</View>
`;
